# imgui-cross-platform-win-and-mac-os-refusion

./: .gitignore  README.md  complete to windows.md  package-lock.json  package.json
apps/imgui/: CMakeLists.txt  README.md
apps/imgui/assets/fonts/: README.md
apps/imgui/src/: README.md
apps/imgui/src/authoring/: ProjectAuthoringService.cpp  ProjectAuthoringService.hpp  README.md
apps/imgui/src/model/: README.md  WorkspaceModel.hpp
apps/imgui/src/platform/: README.md
apps/imgui/src/platform/macos/: MacApp.mm
apps/imgui/src/platform/windows/: README.md  WinApp.cpp  WindowsD3DRenderFrameExecutor.cpp  WindowsD3DRenderFrameExecutor.hpp  WindowsExportExecutor.cpp  WindowsExportExecutor.hpp  WindowsMediaFoundationTextureSource.cpp  WindowsMediaFoundationTextureSource.hpp  WindowsProjectDialog.cpp  WindowsProjectDialog.hpp  WindowsProjectWatcher.cpp  WindowsProjectWatcher.hpp
apps/imgui/src/query/: FrameQueryService.cpp  FrameQueryService.hpp  README.md
apps/imgui/src/render/: PlatformRenderContracts.hpp  README.md
apps/imgui/src/timeline/: README.md  TimelineTruth.hpp
apps/imgui/src/ui/: EditorShell.cpp  EditorShell.hpp  IconGlyphs.hpp  README.md
apps/imgui/tests/: FrameQueryServiceTests.cpp  FrameTruthParityTests.cpp  ProjectAuthoringServiceTests.cpp  TimelineTruthTests.cpp
apps/imgui/tests/fixtures/heavy-fx-workspace/: composition.json  project.json  timeline.json
apps/imgui/tests/fixtures/heavy-fx-workspace/assets/: assets.json
apps/imgui/tests/fixtures/pixel-parity-workspace/: composition.json  project.json  timeline.json
apps/imgui/tests/fixtures/pixel-parity-workspace/native-scenes/main/: index.html  scene.js
apps/imgui/tests/fixtures/svg-asset-workspace/: composition.json  project.json  timeline.json
apps/imgui/tests/fixtures/svg-asset-workspace/assets/: assets.json
apps/imgui/tests/fixtures/svg-asset-workspace/native-scenes/main/: scene.css
docs/: CURRENT_MACOS_STATUS.md  PORTABLE_SOURCE_MANIFEST.md  Professional HyperFrame FX Development Standard.md  shared-professional-development-structure.md  windows-platform-roadmap.md
docs/architecture/: imgui-professional-plan.md  timeline-truth-v2-execution-master-plan.md
docs/engine/: To be known how to build for other platform.md  build transition and adjustment layer.md  core-engine.md  cross-platform-bmf-final-frame-stream-plan.md  native-preview-audit.md  professional-render-plan.md
docs/engine/architecture/: adapter-handoff-ledger.md  export-encoding-contract.md  fx-animation-contract.md  platform-adapters.md  render-semantics.md
docs/engine/architecture/decisions/: ADR-004-ui-shell-ownership.md  ADR-005-preserved-frame-state.md  ADR-008-native-hardware-required-export.md
engine/platform/macos/: README.md  adapter-contract.md  current-native-adapter-map.md
engine/platform/macos-reference/: CanonicalHyperFrameBridge.swift  ExportSettings.swift  FXPassGraph.swift  FXRegistry.swift  JSONEncoder+Pretty.swift  MetalFXRuntime.swift  MetalRenderGraphFrameRenderer.swift  MotionBlurQualityPlanner.swift  NativeFrameRenderer.swift  NativeFrameRendererFactory.swift  NativeHardwareExportGate.swift  NativeRenderEngine.swift  NativeRenderSurface.swift  NativeTimelineExporter.swift  README.md  RenderGraph.swift  UnitedGate.swift  WorkspaceModels.swift
engine/platform/windows/: README.md  adapter-contract.md  current-native-adapter-map.md
scripts/engine/: verify-portable-source.mjs
scripts/platform/: verify-imgui-professional-shell.mjs
src/core/hyperframe/: README.md  index.ts
src/core/hyperframe/contracts/: projectTypes.ts  types.ts
src/core/hyperframe/frame/: frameDescriptor.ts  pixelFrameContract.ts
src/core/hyperframe/fx/: effectNormalizer.ts  effects.ts  fxPassGraph.ts  fxRegistry.manifest.json  motionBlurQualityPlanner.ts  motionFxCapabilities.ts
src/core/hyperframe/project/: authoringModel.ts  fontCatalog.ts  ir.ts  transactionGate.ts
src/core/hyperframe/render-plan/: bmfExport.ts  bmfSchema.ts  canonicalFrameRequest.ts  previewRenderer.ts  qualityPolicy.ts  renderPlanner.ts  sourceSurfaceProvider.ts
src/core/hyperframe/timeline/: timelineAgentContext.ts  timelineFrameMath.ts  timelineOperationTypes.ts  timelineOperations.ts
